--- a/index.cfg
+++ b/index.cfg
@@ -39,4 +39,38 @@
       </hash>
     </hash>
   </atom>
+  <atom type="CommandHelp">
+    <hash type="Item" key="xfrm.laplacian.item@en_US">
+      <atom type="UserName">Laplacian Smoothing</atom>
+      <atom type="ButtonName">Laplacian Smoothing</atom>
+      <atom type="Desc">Smooth vertex positions using Laplacian algorithm.</atom>
+      <hash type="Channel" key="iteration">
+        <atom type="UserName">Iterations</atom>
+        <atom type="Desc">Iteration count.</atom>
+      </hash>
+    </hash>
+  </atom>
+  <atom type="Attributes">
+    <hash type="Sheet" key="xfrm.laplacian.item:sheet">
+      <atom type="Label">Laplacian Smoothing</atom>
+      <atom type="Filter">xfrm.laplacian.item:filterPreset</atom>
+      <atom type="FilterCommand">item.withTypeIsSelected {xfrm.laplacian.item} testSupertypes:true</atom>
+      <hash type="InCategory" key="itemprops:general#head">
+        <atom type="Ordinal">110</atom>
+      </hash>
+      <list type="Control" val="cmd item.channel xfrm.laplacian.item$iteration ?">
+        <atom type="Label">Iterations</atom>
+        <atom type="StartCollapsed">0</atom>
+        <atom type="Hash">xfrm.laplacian.iter.ctrl:control</atom>
+      </list>
+    </hash>
+  </atom>
+  <atom type="Categories">
+    <hash type="Category" key="MeshOperations">
+      <hash type="C" key="xfrm.laplacian.item">polygon</hash>
+    </hash>
+    <hash type="Category" key="MeshOperationsPolygons">
+      <hash type="C" key="xfrm.laplacian.item">polygon</hash>
+    </hash>
+  </atom>
 </configuration>
