--- a/index.cfg
+++ b/index.cfg
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<configuration kit="LaplacianSmoothing" version="1.0">
+<configuration kit="Laplacian" version="1.0">
   <atom type="Extensions64">
     <list type="AutoScan">extra</list>
+  </atom>
+  <atom type="Attributes">
+    <hash type="Sheet" key="Laplacian_Help:sheet">
+      <atom type="Label">Laplacian Smoothing</atom>
+      <atom type="Group">Laplacian Smoothing</atom>
+      <atom type="Style">inline</atom>
+      <hash type="InCategory" key="ExtensionHelp:sheet#tail">
+        <atom type="Ordinal">30</atom>
+      </hash>
+      <list type="Control" val="cmd file.open {kit_Laplacian:index.html}">
+        <atom type="Label">Laplacian Smoothing Help</atom>
+        <atom type="StartCollapsed">0</atom>
+        <atom type="Hash">Laplacian_Help:control</atom>
+      </list>
+    </hash>
   </atom>
   <atom type="Filters">
     <hash type="Preset" key="Laplacian:filterPreset">
@@ -67,10 +82,7 @@
   </atom>
   <atom type="Categories">
     <hash type="Category" key="MeshOperations">
-      <hash type="C" key="xfrm.laplacian.item">polygon</hash>
-    </hash>
-    <hash type="Category" key="MeshOperationsPolygons">
-      <hash type="C" key="xfrm.laplacian.item">polygon</hash>
+      <hash type="C" key="xfrm.laplacian.item">deform</hash>
     </hash>
   </atom>
 </configuration>
