Changed iteration to strength

--- a/index.cfg
+++ b/index.cfg
@@ -40,7 +40,7 @@
         <atom type="Ordinal">100.70</atom>
       </hash>
       <atom type="Group">toolprops/xfrm</atom>
-      <list type="Control" val="cmd tool.attr xfrm.laplacian iteration ?"/>
+      <list type="Control" val="cmd tool.attr xfrm.laplacian strength ?"/>
     </hash>
   </atom>
   <atom type="CommandHelp">
@@ -48,9 +48,9 @@
       <atom type="UserName">Laplacian Smoothing</atom>
       <atom type="Tooltip">Laplacian Smoothing</atom>
       <atom type="Desc">Laplacian Smoothing</atom>
-      <hash type="Attribute" key="iteration">
-        <atom type="UserName">Iterations</atom>
-        <atom type="Desc">Iteration count.</atom>
+      <hash type="Attribute" key="strength">
+        <atom type="UserName">Strength</atom>
+        <atom type="Desc">Smoothing strength.</atom>
       </hash>
     </hash>
   </atom>
@@ -59,9 +59,9 @@
       <atom type="UserName">Laplacian Smoothing</atom>
       <atom type="ButtonName">Laplacian Smoothing</atom>
       <atom type="Desc">Smooth vertex positions using Laplacian algorithm.</atom>
-      <hash type="Channel" key="iteration">
-        <atom type="UserName">Iterations</atom>
-        <atom type="Desc">Iteration count.</atom>
+      <hash type="Channel" key="strength">
+        <atom type="UserName">Strength</atom>
+        <atom type="Desc">Smoothing strength.</atom>
       </hash>
     </hash>
   </atom>
@@ -73,10 +73,10 @@
       <hash type="InCategory" key="itemprops:general#head">
         <atom type="Ordinal">110</atom>
       </hash>
-      <list type="Control" val="cmd item.channel xfrm.laplacian.item$iteration ?">
-        <atom type="Label">Iterations</atom>
+      <list type="Control" val="cmd item.channel xfrm.laplacian.item$strength ?">
+        <atom type="Label">Strength</atom>
         <atom type="StartCollapsed">0</atom>
-        <atom type="Hash">xfrm.laplacian.iter.ctrl:control</atom>
+        <atom type="Hash">xfrm.laplacian.strength.ctrl:control</atom>
       </list>
     </hash>
   </atom>
