--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,22 @@ cmake_minimum_required(VERSION 3.10)
 #find_package(Libigl CONFIG REQUIRED)
 
 project(laplacian VERSION 1.0)
+include(FetchContent)
 
 # set your directory pathes below
-set(LXSDK_PATH "../LXSDK-000025")
-set(LIBIGL_PATH "../libigl-2.5.0")
-set(EIGEN_PATH "../eigen-3.4.0")
+#set(LXSDK_PATH "../LXSDK-000025")
+#set(LIBIGL_PATH "../libigl-2.5.0")
+#set(EIGEN_PATH "../eigen-3.4.0")
+
+if (NOT LXSDK_PATH)
+    FetchContent_Declare( 
+        lxsdk
+        URL https://thefoundry.s3.us-east-1.amazonaws.com/products/modo/16.1v5/lxsdk16.1v5_692025.zip
+    )
+    FetchContent_Populate(lxsdk)
+    message(STATUS "FetchContent lxsdk directory: ${lxsdk_SOURCE_DIR}")
+    set(LXSDK_PATH ${lxsdk_SOURCE_DIR})
+endif()
 
 # Get all source and headers for lxsdk
 file(GLOB LXSDK_SOURCES ${LXSDK_PATH}/common/*.cpp)
@@ -39,6 +50,28 @@ target_include_directories(lxsdk
         ${LXSDK_PATH}/include
 )
 
+
+if (NOT EIGEN_PATH)
+    FetchContent_Declare( 
+        eigen
+        GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
+        GIT_TAG        3.4.0
+    )
+    FetchContent_Populate(eigen)
+    message(STATUS "FetchContent eigen directory: ${eigen_SOURCE_DIR}")
+    set(EIGEN_PATH ${eigen_SOURCE_DIR})
+endif()
+
+if (NOT LIBIGL_PATH)
+    FetchContent_Declare( 
+        libigl
+        GIT_REPOSITORY https://github.com/libigl/libigl.git
+        GIT_TAG        v2.5.0
+    )
+    FetchContent_Populate(libigl)
+    message(STATUS "FetchContent libigl directory: ${libigl_SOURCE_DIR}")
+    set(LIBIGL_PATH ${libigl_SOURCE_DIR})
+endif()
 
 add_library(laplacian
     SHARED
@@ -77,22 +110,25 @@ target_link_libraries(laplacian
 )
 
 # Install plugins and configs into kit directry
+if (NOT CMAKE_INSTALL_PREFIX)
+    set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/Laplacian")
+endif()
 install(
     FILES
         "index.cfg"
         "index.html"
     DESTINATION
-        "."
+        ${CMAKE_INSTALL_PREFIX}
 )
 install(
     DIRECTORY
         "images"
     DESTINATION
-        "."
+        ${CMAKE_INSTALL_PREFIX}
 )
 install(
     TARGETS
         laplacian
     DESTINATION
-        "extra"
+        ${CMAKE_INSTALL_PREFIX}/extra
 )
